--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -1,99 +1,89 @@
-<p>dynamic-page works!</p>
-<h2>Reactivos: Switches</h2>
+<h2>Reactivos: <small> Dinámicos </small></h2>
 <hr>
-
 
 <form autocomplete="off">
 
-    <!-- Radio -->
-    <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Género</label>
+    <!-- Nombre -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Nombre</label>
+        <div class="col-sm-9">
+            <input class="form-control"
+                   placeholder="Nombre de la persona">
+            <span class="form-text text-danger">
+                   error message
+            </span>
+        </div>
+    </div>
+
+    <!-- Agregar Favorito -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Agregar</label>
         <div class="col-sm-9">
 
-            <div class="form-check">
-                <input class="form-check-input"
-                       type="radio"
-                       value="M"
-                       id="radioMasculino">
-                <label class="form-check-label" for="radioMasculino">
-                  Masculino
-                </label>
-            </div>
+            <div class="input-group">
+                <input class="form-control"
+                       placeholder="Agregar favorito">
 
-            <div class="form-check">
-                <input class="form-check-input"
-                       type="radio"
-                       value="F"
-                       id="radioFemenino">
-                <label class="form-check-label" for="radioFemenino">
-                  Femenino
-                </label>
+
+                <button class="btn btn-outline-primary"
+                        type="button">
+                    Agregar favorito
+                </button>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Lista de Juegos Favoritos -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Favoritos</label>
+        <div class="col-sm-9">
+
+            <div class="mb-1">
+
+                <div class="input-group">
+                    <input class="form-control">
+
+                    <button class="btn btn-outline-danger"
+                            type="button">
+                      Eliminar
+                  </button>
+                </div>
+                <span class="form-text text-danger">
+                   Este campo es requerido
+                </span>
+
             </div>
 
         </div>
     </div>
 
-    <!-- Switches -->
-    <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Notificaciones</label>
-        <div class="col-sm-9">
-
-            <div class="form-check form-switch mt-2">
-                <input class="form-check-input"
-                       type="checkbox"
-                       id="flexSwitchCheckChecked">
-                <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
-            </div>
-
-        </div>
-    </div>
-
-    <!-- Switches -->
-    <div class="row mb-3">
-        <label class="col-sm-3 col-form-label"></label>
-        <div class="col-sm-9">
-            <div class="form-check">
-                <input class="form-check-input"
-                       type="checkbox"
-                       id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                  Términos y condiciones de uso
-                </label>
-              </div>
-              <span class="form-text text-danger">
-                 Debe de aceptar las condiciones de uso
-              </span>
-
-        </div>
-    </div>
 
 
-    <!-- Boton submit -->
     <div class="row">
-        <div class="col">
-            <button class="btn btn-primary float-end"
-                    type="submit">
+        <div class="col-sm-12">
+            <button type="submit"
+                    class="btn btn-primary float-end"
+                    >
+                    <!-- [disabled]="myForm.invalid" -->
                 Guardar
             </button>
         </div>
     </div>
 
+
 </form>
 
 
-<h5>Valor del formulario</h5>
+
+<span>Valid</span>
 <pre>{{ 'object' | json }}</pre>
 <br>
 
-<h5>Persona</h5>
+<span>Value</span>
 <pre>{{ 'object' | json }}</pre>
 <br>
 
-<h5>Valid</h5>
+<span>Agregar Juego</span>
 <pre>{{ 'object' | json }}</pre>
-
-<!-- <h5>Términos</h5> -->
-<!-- <pre>{{ myForm.controls?.terminos?.errors | json }}</pre> -->
-
-<!-- <br>
-<pre>Condiciones: </pre> -->
+<pre>{{ 'object' | json }}</pre>
