--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -11,7 +11,7 @@
         class="form-control"
         placeholder="Nombre de la persona"
       />
-      <span class="form-text text-danger"> error message </span>
+      <span *ngIf="isValidField('name')" class="form-text text-danger"> {{getFieldError('name')}} </span>
     </div>
   </div>
 
@@ -42,7 +42,7 @@
 
           <button class="btn btn-outline-danger" type="button">Eliminar</button>
         </div>
-        <span class="form-text text-danger"> Este campo es requerido </span>
+        <span *ngIf="ifValidFieldInArray(favoriteGames, i)" class="form-text text-danger"> Este campo es requerido </span>
       </div>
     </div>
   </div>
