--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -11,7 +11,9 @@
         class="form-control"
         placeholder="Nombre de la persona"
       />
-      <span *ngIf="isValidField('name')" class="form-text text-danger"> {{getFieldError('name')}} </span>
+      <span *ngIf="isValidField('name')" class="form-text text-danger">
+        {{ getFieldError("name") }}
+      </span>
     </div>
   </div>
 
@@ -40,9 +42,20 @@
         <div class="input-group">
           <input [formControlName]="i" class="form-control" />
 
-          <button class="btn btn-outline-danger" type="button">Eliminar</button>
+          <button
+            (click)="onDeleteFavorite(i)"
+            class="btn btn-outline-danger"
+            type="button"
+          >
+            Eliminar
+          </button>
         </div>
-        <span *ngIf="ifValidFieldInArray(favoriteGames, i)" class="form-text text-danger"> Este campo es requerido </span>
+        <span
+          *ngIf="ifValidFieldInArray(favoriteGames, i)"
+          class="form-text text-danger"
+        >
+          Este campo es requerido
+        </span>
       </div>
     </div>
   </div>
