--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -48,7 +48,7 @@
             placeholder="Nombre código del usuario"
           />
           <span class="form-text text-danger">
-            El username no puede ser Strider
+            El username no puede ser pepito
           </span>
         </div>
       </div>
@@ -109,7 +109,7 @@
 <pre>{{ myForm.value.email | json }}</pre>
 
 <h5>Username</h5>
-<pre>{{ myForm.value.username | json }}</pre>
+<pre>{{ myForm.controls['username'].errors | json }}</pre>
 
 <h5>Password</h5>
 <pre>{{ myForm.value.password | json }}</pre>
