fix: change "nombre código" to "alias"

--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -45,7 +45,7 @@
             type="text"
             class="form-control"
             formControlName="username"
-            placeholder="Nombre código del usuario"
+            placeholder="Alias del usuario"
           />
           <span *ngIf="isValidField('username')" class="form-text text-danger">
             El username no puede ser pepito
